# pg-diff

./: .env  Cargo.toml  README.md  offline-build  run
.sqlx/: query-61a3321f778f7616c64caabd9d20bb288fe85c60f9a6b4723970c88c90b26fa6.json  query-9906caa5a82aa3706686c0a293e08bbbaf90f93d976ed1aac4d52e41dae3b395.json
src/: connection_string.rs  diff.rs  lib.rs  main.rs  tools.rs
support/: package.json
tests/: basic_tests.rs  first.rs  json_column_diffing.rs  should_not_be_diffrent.rs  tables_wihte_offset_column.rs  tables_with_offset_column.rs
